tests/fail/no_return_type.py
def f():
    return 10
